# game

./: CMakeLists.txt
source/: autosimulator.cpp  autosimulator.h  inputController.h  main.cpp  models.cpp  models.h  objects.cpp  objects.h  view.cpp  view.h
source/controller/: inputController.cpp  inputController.h  manipulatorData.h
